--- a/Site do Deadpool.css
+++ b/Site do Deadpool.css
@@ -27,7 +27,7 @@ body{
 }
 
 #main{
-    padding: 10px;
+    margin-left: 30px;
 }
 
 #hh{
@@ -73,3 +73,5 @@ hr {
     display:flex;
     flex-direction: column;
 }
+
+h2 {color: #520c0c; display: flex; align-items: center; justify-content: center;}
