UPDATE - Correção de BUG da Aparência dos Botões

--- a/Site do Deadpool.css
+++ b/Site do Deadpool.css
@@ -56,7 +56,7 @@ hr {
     justify-content: center; 
 }
 
-.button{
+button{
     background-color: #520c0c;
     color: antiquewhite;
     cursor: pointer
