--- a/Site do Deadpool.css
+++ b/Site do Deadpool.css
@@ -46,6 +46,7 @@ hr {
 
 #fim{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center; 
 }
@@ -74,4 +75,4 @@ button{
     flex-direction: column;
 }
 
-h2 {color: #520c0c; display: flex; align-items: center; justify-content: center;}
+h2 {color: #d66565; display: flex; align-items: center; justify-content: center;}
